ui/apps/themes/mixins.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * Copyright (C) 2011 Open-Xchange, Inc.
 * Mail: info@open-xchange.com
 *
 * @author Matthias Biggeleben <matthias.biggeleben@open-xchange.com>
 * @author David Bauer <david.bauer@open-xchange.com>
 */

.border-radius(@radius: 0) {
    -webkit-border-radius: @radius;
    -moz-border-radius: @radius;
    -ms-border-radius: @radius;
    border-radius: @radius;
}

.vertical-gradient(@startColor: #888888, @endColor: #333333) {
    background-color: mix(@startColor, @endColor, 60%);
    background-image: -moz-linear-gradient(top, @startColor, @endColor);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(@startColor), to(@endColor));
    background-image: -webkit-linear-gradient(top, @startColor, @endColor);
    background-image: -o-linear-gradient(top, @startColor, @endColor);
    background-image: linear-gradient(to bottom, @startColor, @endColor);
    background-repeat: repeat-x;
    filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",argb(@startColor),argb(@endColor)));
}

.radial-gradient(@color1: #000000, @color2: #555555, @color3: #ffffff) {
    background: mix(@color1, @color3, 60%); /* Old browsers */
    background: -moz-radial-gradient(center, circle cover, @color1 0, @color2 40%, @color3 100%); /* FF3.6+ */
    background: -webkit-gradient(radial, center center, 0, center center, 100%, color-stop(0,@color1), color-stop(31%,@color2), color-stop(100%,@color3)); /* Chrome,Safari4+ */
    background: -webkit-radial-gradient(center, ellipse cover,  @color1 0,@color2 31%,@color3 100%); /* Chrome10+,Safari5.1+ */
    background: -o-radial-gradient(center, ellipse cover,  @color1 0,@color2 31%,@color3 100%); /* Opera 12+ */
    background: -ms-radial-gradient(center, ellipse cover,  @color1 0,@color2 31%,@color3 100%); /* IE10+ */
    background: radial-gradient(center, ellipse cover,  @color1 0,@color2 31%,@color3 100%); /* W3C */
    filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",argb(@color1),argb(@color3)));
}

.picture(@width: 64px, @height: 64px) {
    width: @width;
    height: @height;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    .border-radius(@contact-picture-radius);
}

.ellipsis() {
    .text-overflow();
}

.overflow(@type: auto) {
    overflow: @type;
    -webkit-overflow-scrolling: touch;
}

.overflow-x(@type: auto) {
    overflow-x: @type;
    -webkit-overflow-scrolling: touch;
}

.overflow-y(@type: auto) {
    overflow-y: @type;
    -webkit-overflow-scrolling: touch;
}

.backface-visibility(@type: hidden) {
   .touch & {
        backface-visibility: @type;
        -webkit-backface-visibility: @type;
        -moz-backface-visibility: @type;
    }
}

//used in files module
.image-effect(@opacity: 1) {
    img, .preview-cover, .fa {
        opacity: @opacity;
    }
}

.fontWeight(@weight) {
    font-weight: @weight;
}

.fontWeight(@weight) when (@weight = 300) {
    // automatically inject light font-family, especially for Windows
    font-family: @light-font-family;
}

