Fixed: Bug 33855 - mail list flickering

--- a/ui/apps/themes/mixins.less
+++ b/ui/apps/themes/mixins.less
@@ -89,7 +89,7 @@
     font-weight: @weight;
 }
 
-.fontWeight(@weight) when (@weight = 300) {
-    // automatically inject light font-family, especially for Windows
-    font-family: @light-font-family;
-}
+// .fontWeight(@weight) when (@weight = 300) {
+//     // automatically inject light font-family, especially for Windows
+//     font-family: @light-font-family;
+// }
